added maserai mc20

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
                 <li><a href="cars/mclaren-f1.html">McLaren F1</a></li>
                 <li><a href="cars/aston-martin-db5.html">Aston Martin DB5</a></li>
                 <li><a href="cars/toyota-supra.html">Toyota Supra MK IV</a></li>
+                <li><a href="cars/Maserati_MC20.html">Maserati MC20</a></li>
             </ul>
         </nav>
     </main>
