--- a/index.html
+++ b/index.html
@@ -26,9 +26,12 @@
                 <li><a href="cars/aston-martin-db5.html">Aston Martin DB5</a></li>
                 <li><a href="cars/toyota-supra.html">Toyota Supra MK IV</a></li>
                 <li><a href="cars/Maserati_MC20.html">Maserati MC20</a></li>
+                <li><a href="car/pagani-huayra.html">Pagani-Huayra</a></li>
+                
             </ul>
         </nav>
     </main>
 
 </body>
+
 </html>
